--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,38 @@
 
 
 body {
+    margin: 0 auto;        /*margin: 0 auto;는 위아래는 0, 좌우는 auto로 설정하여 가운데 정렬*/
+    color: #3f464d;
     font-family: "Spoqa Han Sans", sans-serif;  /*글꼴 지정*/
+
+}
+
+.inner {    /*inner라는 클래스에 적용*/
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+header {
+    width: 100%;
+    height: 60px;
+    background-color: #fff; /*배경색 지정, ffffff를 fff로 줄일 수 있음*/
+    position: fixed;    /*고정된 위치에 요소를 배치, 스크롤해도 고정된 위치에 있음*/
+    top: 0;
+    left: 0;        /* 헤더를 브라우저 창의 최상단 좌측 모서리에 고정시키기 위함, 스크롤해도 헤더가 항상 화면 최산단에 붙어있게 된다.*/
+    z-index: 1000;  /*z-index: 요소의 쌓임 순서를 지정, 숫자가 클수록 위에 쌓임*/
+}
+
+.head-container {
+    width: 100%;
+    height: 100%;
+    display: flex;  
+}
+
+
+@media only screen and (min-width: 1200px) { /* only screen: 화면 장치에만 적용, 화면 너비가 1200px이상일때 아래 조건을 적용한다., 반응형 웹디자인을 위한 미디어 쿼리*/
+    .inner{
+        max-width: 1200px;  /*즉 최소 1200이상일때 최대 너비 1200px로 설정*/
+    }
+    
 }
